--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -2,4 +2,4 @@ preload = ~/Pictures/wall/gluee.jpg
 wallpaper = eDP-1,~/Pictures/wall/gluee.jpg
 wallpaper = DP-1, ~/Pictures/wall/gluee.jpg
 splash = false
-ipc = off
+ipc = on
