--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -179,6 +179,9 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     natural_scroll = true
+    touchpad {
+        natural_scroll = true 
+    }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
