--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -58,14 +58,14 @@ env = ALACRITTY_SOCKET=wayland
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 5
-    gaps_out = 10
+    gaps_in = 10
+    gaps_out = 20
 
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = $sapphire
-    col.inactive_border = $text
+    col.active_border = $text
+    col.inactive_border = rgba(00000000) # scuffed but it works xD  
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -221,6 +221,9 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
 bind = $mainMod ,W, exec, ~/.local/bin/rofi-wifi-menu.sh
 bind = $mainMod SHIFT, X, exec,$lock # dwindle 
+
+bind = $mainMod Control, s, exec, $HOME/.config/hypr/scripts/screenshots/screenshot_area.sh
+
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
