--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,6 @@ source=~/.config/hypr/macchiato.conf
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,1
 
-
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -35,7 +34,7 @@ exec-once = waybar & dunst & hyprpaper
 exec-once = ~/.local/bin/wpswitch
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/libexec/polkit-kde-authentication-agent-1
-
+exec-once = corectrl
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -180,7 +179,8 @@ input {
 
     natural_scroll = true
     touchpad {
-        natural_scroll = true 
+        natural_scroll = true
+        disable_while_typing = false
     }
 }
 
