--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -17,11 +17,12 @@ monitor=,preferred,auto,1
 # Set programs that you use
 $terminal = wezterm
 $fileManager = dolphin
-$menu = wofi --show
+$menu = rofi -show drun
 $browser = firefox
 $vscode = code
 $notes = obsidian
 $lock = hyprlock
+$logout = wlogout -b 2
 
 #################
 ### AUTOSTART ###
@@ -30,7 +31,7 @@ $lock = hyprlock
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = waybar & dunst & hyprpaper
+exec-once = waybar & swaync & hyprpaper
 exec-once = ~/.local/bin/wpswitch
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/libexec/polkit-kde-authentication-agent-1
@@ -42,8 +43,12 @@ exec-once = corectrl
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
+env = XCURSOR_THEME,Adwaita
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+
+exec-once = hyprctl setcursor Adwaita 24 
+
 env = QT_QPA_PLATFORMTHEME,qt6ct 
 env = QT_QPA_PLATFORM=wayland
 env = MOZ_ENABLE_WAYLAND=1
@@ -207,7 +212,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, t, exec, $terminal
 bind = $mainMod, q, killactive, 
-bind = $mainMod Shift, Q, exit, 
+bind = $mainMod Shift, Q, exec, $logout 
 bind = $mainMod Shift, E, exec, $fileManager
 bind = $mainMod, b, exec, $browser
 bind = $mainMod Shift, C, exec, $vscode
