--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -70,8 +70,8 @@
     "format": "<span color='#82aaff'></span> {status}",
     "format-connected-battery": "<span color='#82aaff'></span> {device_battery_percentage}%",
     "tooltip-format": "{device_alias} {status}",
-    "on-click": "blueman-applet",
-    "on-click-right": "killall blueman-applet",
+    "on-click": "blueman-manager",
+    "on-click-right": "killall blueman-manager",
   },
   "pulseaudio": {
     "format": "<span color='#f78c6c'>{icon}</span> {volume}%",
