--- a/wofi/config
+++ b/wofi/config
@@ -4,5 +4,10 @@ image_size=40
 term=wezterm
 insensitive=true
 location=center
-no_actions=true
-prompt=Search
+
+prompt=hello bro :3
+
+show_all=true
+
+
+
