--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
-preload = ~/Pictures/wall/gluee.jpg
-wallpaper = eDP-1, ~/Pictures/wall/Macchiato-hald8-gluee.jpg.jpg
-wallpaper = DP-1, ~/Pictures/wall/Macchiato-hald8-gluee.jpg.jpg
+preload = ~/Pictures/wall/gruvbox.png
+wallpaper = eDP-1, ~/Pictures/wall/gruvbox.png
+wallpaper = DP-1, ~/Pictures/wall/gruvbox.png
 splash = false
 ipc = on
