--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,7 +16,7 @@ monitor=,preferred,auto,1
 
 # Set programs that you use
 $terminal = wezterm
-$fileManager = dolphin
+$fileManager = nemo
 $menu = rofi -show drun
 $browser = firefox
 $vscode = code
@@ -304,3 +304,6 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+windowrule = noborder, ^(Audacious)$
+windowrule = rounding 0, ^(Audacious)$
