hyprland refactor + hyprlock

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,6 +1,7 @@
 source = ./colors/gruvbox.conf
 source = ./configs/monitors.conf
 source = ./configs/lookandfeel.conf
+source = ./configs/input.conf
 source = ./configs/myprograms.conf
 source = ./configs/keybindings.conf
 source = ./configs/windowrules.conf
