--- a/hypr/configs/myprograms.conf
+++ b/hypr/configs/myprograms.conf
@@ -10,7 +10,7 @@ $fileManager = dolphin
 $menu = rofi -show drun
 $browser = firefox
 $vscode = code
-$notes = obsidian
+$notes = flatpak run md.obsidian.Obsidian
 $lock = hyprlock
 $logout = wlogout -b 2
 
