--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,4 +1,5 @@
 source = ./colors/gruvbox.conf
+source = ./configs/autostart.conf
 source = ./configs/monitors.conf
 source = ./configs/lookandfeel.conf
 source = ./configs/input.conf
