--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -19,7 +19,7 @@ image {
 }
 
 label {
-  text = hello bro 😹.
+  text = hello bro 😹
   color = rgba(251, 241, 199, 1)
   font_size = 28
   font_family = Iosevka Nerd Font Mono
