--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,8 +1,8 @@
-source = ./colors/gruvbox.conf
 source = ./configs/autostart.conf
-source = ./configs/monitors.conf
-source = ./configs/lookandfeel.conf
+source = ./configs/env.conf
 source = ./configs/input.conf
+source = ./configs/keybindings.conf 
+source = ./configs/lookandfeel.conf
+source = ./configs/monitors.conf
 source = ./configs/myprograms.conf
-source = ./configs/keybindings.conf
 source = ./configs/windowrules.conf
