--- a/hypr/configs/env.conf
+++ b/hypr/configs/env.conf
@@ -10,5 +10,5 @@ env = HYPRCURSOR_SIZE,24
 
 env = QT_QPA_PLATFORMTHEME,qt6ct 
 env = QT_QPA_PLATFORM=wayland
+env = QT_STYLE_OVERRIDE,kvantum
 env = MOZ_ENABLE_WAYLAND=1
-env = ALACRITTY_SOCKET=wayland
