--- a/hypr/configs/lookandfeel.conf
+++ b/hypr/configs/lookandfeel.conf
@@ -5,6 +5,8 @@
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
+source = ../colors/catppuccin_macchiato.conf
+
 general {
     gaps_in = 10
     gaps_out = 20
