--- a/hypr/configs/lookandfeel.conf
+++ b/hypr/configs/lookandfeel.conf
@@ -18,7 +18,7 @@ general {
     col.inactive_border = rgba(00000000) # scuffed but it works xD  
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
+    resize_on_border = true
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -28,7 +28,7 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 1
+    rounding = 5
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
