--- a/hypr/configs/input.conf
+++ b/hypr/configs/input.conf
@@ -17,7 +17,7 @@ input {
     natural_scroll = true
     touchpad {
         natural_scroll = true
-        disable_while_typing = false
+        disable_while_typing = true
     }
 }
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
