--- a/hypr/configs/windowrules.conf
+++ b/hypr/configs/windowrules.conf
@@ -21,3 +21,21 @@ windowrule = noborder, ^(Audacious)$
 windowrule = rounding 0, ^(Audacious)$
 
 
+
+
+# HYPRBARS:
+# might refactor this sometime 
+
+plugin {
+    hyprbars {
+        # example config
+        bar_height = 20
+
+        # example buttons (R -> L)
+        # hyprbars-button = color, size, on-click
+        hyprbars-button = rgb(ff4040), 10, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(eeee11), 10, , hyprctl dispatch fullscreen 1
+    }
+}
+# windowrulev2 = plugin:hyprbars:nobar, ^floating:0 
+
