--- a/hypr/configs/autostart.conf
+++ b/hypr/configs/autostart.conf
@@ -5,7 +5,7 @@
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = waybar & swaync & swww-daemon
+exec-once = waybar & swaync & swww-daemon & hypridle
 exec-once = ~/.local/bin/wpswitch
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/libexec/polkit-kde-authentication-agent-1
