--- a/hypr/configs/myprograms.conf
+++ b/hypr/configs/myprograms.conf
@@ -5,9 +5,10 @@
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = wezterm
+$terminal = wezterm 
 $fileManager = dolphin
 $menu = rofi -show drun
+$runMenu = rofi -show run
 $browser = firefox
 $vscode = code
 $notes = flatpak run md.obsidian.Obsidian
