--- a/hypr/configs/env.conf
+++ b/hypr/configs/env.conf
@@ -7,5 +7,5 @@
 
 env = QT_QPA_PLATFORMTHEME,qt6ct 
 env = QT_QPA_PLATFORM=wayland
-env = QT_STYLE_OVERRIDE,kvantum
+env = QT_STYLE_OVERRIDE=kvantum
 env = MOZ_ENABLE_WAYLAND=1
