--- a/hypr/configs/keybindings.conf
+++ b/hypr/configs/keybindings.conf
@@ -30,10 +30,22 @@ bind = $mainMod Control, s, exec, $HOME/.config/hypr/scripts/screenshots/screens
 
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
+
+# Move windows 
+bind = $mainMod SHIFT, h, movewindow, l 
+bind = $mainMod SHIFT, l, movewindow, r
+bind = $mainMod SHIFT, k, movewindow, u 
+bind = $mainMod SHIFT, J, movewindow, d 
+
+# resize windows 
+bind = $mainMod ALT, h, resizeactive, -10 0
+bind = $mainMod ALT, l, resizeactive, 10 0
+bind = $mainMod ALT, k, resizeactive, 0 -10
+bind = $mainMod ALT, j, resizeactive, 0 10
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
