--- a/sway/config
+++ b/sway/config
@@ -1,90 +1,93 @@
-# +---------------------------+
-# | SwayWM Configuration file |
-# +---------------------------+
-
-
+#  ___ _____   ________        ___ __   __
+# |_ _|___ /  / / ___\ \      / / \\ \ / /
+#  | |  |_ \ / /\___ \\ \ /\ / / _ \\ V / 
+#  | | ___) / /  ___) |\ V  V / ___ \| |  
+# |___|____/_/  |____/  \_/\_/_/   \_\_|  
 #
-# Variables:
-#
-set {
-  $mod Mod4
-  $left h
-  $down j
-  $up k
-  $right l
+# 1kaipark
+# modkey:
+set $mod Mod4
 
-  $resize_factor 40px
+# theme 
+include catppuccin_frappe
 
-  $menu wofi --show drun | swaymsg
-  $browser firefox
-}
+#     _   _   _ _____ ___  ____ _____  _    ____ _____ 
+#    / \ | | | |_   _/ _ \/ ___|_   _|/ \  |  _ \_   _|
+#   / _ \| | | | | || | | \___ \ |/ | / _ \ | |_) || |  
+#  / ___ \ |_| | | || |_| |___) || |/ ___ \|  _ < | |  
+# /_/   \_\___/  |_| \___/|____/ |_/_/   \_\_| \_\|_|  
+                                                     
+# run picom
+exec_always --no-startup-id dunst &
+exec_always swww-daemon 
+exec_always waybar
+exec_always corectrl
 
-#
-# Terminal:
-#
-set $term wezterm
+# WALLPAPER COMMAND
+exec_always swww img $HOME/Pictures/wall/catppuccin_frappe_car_rain.jpg
 
-default_border pixel 4
-default_floating_border pixel 2
-titlebar_border_thickness 2
-
-# random wallpaper 
-set $wallpapers_path ~/Pictures/wall/
-output * bg `find $wallpapers_path -type f | shuf -n 1` stretch
+# launch polybar
+exec_always --no-startup-id killall -q
 
 
 
-smart_borders on
-gaps inner 6
 
-input {
-  type:touchpad {
-    tap enabled
-    natural_scroll enabled
-    middle_emulation enabled
-    dwt disabled
-  }
 
-  type:keyboard {
-    xkb_options ctrl:nocaps
-  }
 
-  type:touch {
-    events disabled
-  }
-}
+#    / \  |  _ \|  _ \/ ___| 
+#   / _ \ | |_) | |_) \___ \ 
+#  / ___ \|  __/|  __/ ___) |
+# /_/   \_\_|   |_|   |____/ 
 
-input * {
-    natural_scroll enabled
-  }
-
-#
-# Load Xresources
-#
-exec_always xrdb -load ~/.Xresources
-
-# hopefully this actually works
-exec_always fcitx5
-exec_always wezterm
-exec_always bash ~/dev/stack.sh
-
-### Key bindings
-#
-# Basics:
-#
 bindsym {
-  $mod+t exec $term
-  Control+space exec $menu
-  $mod+b exec $browser
-  $mod+q kill
-  $mod+z exec swaylock
-  $mod+Control+r reload
-  $mod+Control+q exit
+  $mod+t exec kitty
+  $mod+b exec firefox 
+  $mod+Shift+e exec dolphin 
+  $mod+Shift+o exec flatpak run md.obsidian.Obsidian 
 }
 
-#
-# Multimedia:
-#
+
+
+
+#   ____ ___  ____  _____   _  _________   ______ ___ _   _ ____  ____  
+#  / ___/ _ \|  _ \| ____| | |/ / ____\ \ / / __ )_ _| \ | |  _ \/ ___| 
+# | |  | | | | |_) |  _|   | ' /|  _|  \ V /|  _ \| ||  \| | | | \___ \ 
+# | |__| |_| |  _ <| |___  | . \| |___  | | | |_) | || |\  | |_| |___) |
+#  \____\___/|_| \_\_____| |_|\_\_____| |_| |____/___|_| \_|____/|____/ 
+
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
+
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
+
+bindsym $mod+period split h
+bindsym $mod+comma split v
+
+bindsym $mod+f fullscreen toggle
+
+floating_modifier $mod
+
+bindsym Control+space exec "rofi -show drun"
+bindsym $mod+Control+r reload
+bindsym $mod+q kill
+
+# toggle tiling / floating
+bindsym $mod+Shift+space floating toggle
+
+# change focus between tiling / floating windows
+bindsym $mod+space focus mode_toggle
+
+# move workspaces between monitors
+bindsym $mod+Shift+b move workspace to output right
+
+# take a screenshot
+# bindsym 
+
 bindsym --locked {
   XF86MonBrightnessUp exec brightnessctl set +25
   XF86MonBrightnessDown exec brightnessctl set 25-
@@ -103,123 +106,140 @@ bindsym --locked {
   $mod+Comma exec playerctl previous
 }
 
-# Drag floating windows by holding down $mod and left mouse button.
-# Resize them with right mouse button + $mod.
-# Despite the name, also works for non-floating windows.
-# Change normal to inverse to use left mouse button for resizing and right
-# mouse button for dragging.
-floating_modifier $mod normal
+bindsym ctrl + F3 exec amixer set Capture cap && dunstify -a "Microphone" "Microphone" "Microphone is now unmuted" -r 100 -i /usr/local/bin/icons/mic.svg
+# bindsym ctrl + F4 exec amixer set Capture nocap && dunstify -a "Microphone" "Microphone" "Microphone is now muted" -r 100 -i /usr/local/bin/icons/mic-off.svg
 
-#
-# Window controls:
-#
-bindsym {
-  # Change focus
-  $mod+$left focus left
-  $mod+$down focus down
-  $mod+$up focus up
-  $mod+$right focus right
+# bindsym ctrl + F9 exec xinput set-prop 15 "Device Enabled" 0 && dunstify -a "Touchpad" "Touchpad" "Touchpad is disabled" -r 100
+# bindsym ctrl + F10 exec xinput set-prop 15 "Device Enabled" 1 && dunstify -a "Touchpad" "Touchpad" "Touchpad is enabled" -r 100
 
-  # Move
-  $mod+Shift+$left move left
-  $mod+Shift+$down move down
-  $mod+Shift+$up move up
-  $mod+Shift+$right move right
+# workspaces names
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
+set $ws10 "10"
 
-  # Resize
-  $mod+Ctrl+$left resize shrink width $resize_factor
-  $mod+Ctrl+$down resize grow height $resize_factor 
-  $mod+Ctrl+$up resize shrink height $resize_factor
-  $mod+Ctrl+$right resize grow width $resize_factor 
+# switch to workspace
+bindsym $mod+1 workspace number $ws1
+bindsym $mod+2 workspace number $ws2
+bindsym $mod+3 workspace number $ws3
+bindsym $mod+4 workspace number $ws4
+bindsym $mod+5 workspace number $ws5
+bindsym $mod+6 workspace number $ws6
+bindsym $mod+7 workspace number $ws7
+bindsym $mod+8 workspace number $ws8
+bindsym $mod+9 workspace number $ws9
+bindsym $mod+0 workspace number $ws10
+
+# move focused container to workspace
+bindsym $mod+Shift+1 move container to workspace number $ws1
+bindsym $mod+Shift+2 move container to workspace number $ws2
+bindsym $mod+Shift+3 move container to workspace number $ws3
+bindsym $mod+Shift+4 move container to workspace number $ws4
+bindsym $mod+Shift+5 move container to workspace number $ws5
+bindsym $mod+Shift+6 move container to workspace number $ws6
+bindsym $mod+Shift+7 move container to workspace number $ws7
+bindsym $mod+Shift+8 move container to workspace number $ws8
+bindsym $mod+Shift+9 move container to workspace number $ws9
+bindsym $mod+Shift+0 move container to workspace number $ws10
+
+# reload the configuration file
+bindsym $mod+Shift+c reload
+# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+bindsym $mod+Shift+r restart
+# exit i3 (logs you out of your X session)
+bindsym $mod+Control+q exec wlogout -b 2
+
+# resize window (you can also use the mouse for that)
+mode "resize" {
+        # These bindings trigger as soon as you enter the resize mode
+
+        # Pressing left will shrink the window’s width.
+        # Pressing right will grow the window’s width.
+        # Pressing up will shrink the window’s height.
+        # Pressing down will grow the window’s height.
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
+
+        # same bindings, but for the arrow keys
+        bindsym Left resize shrink width 10 px or 10 ppt
+        bindsym Down resize grow height 10 px or 10 ppt
+        bindsym Up resize shrink height 10 px or 10 ppt
+        bindsym Right resize grow width 10 px or 10 ppt
+
+        # back to normal: Enter or Escape or $mod+r
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+        bindsym $mod+r mode "default"
 }
 
-#
-# Workspaces:
-#
-bindsym {
-  # Switch to workspace
-  $mod+1 workspace number 1
-  $mod+2 workspace number 2
-  $mod+3 workspace number 3
-  $mod+4 workspace number 4
-  $mod+5 workspace number 5
-  $mod+6 workspace number 6
-  $mod+7 workspace number 7
-  $mod+8 workspace number 8
-  $mod+9 workspace number 9
-  $mod+0 workspace number 10
-  
-  # Move focused container to workspace
-  $mod+Shift+1 move container to workspace number 1
-  $mod+Shift+2 move container to workspace number 2
-  $mod+Shift+3 move container to workspace number 3
-  $mod+Shift+4 move container to workspace number 4
-  $mod+Shift+5 move container to workspace number 5
-  $mod+Shift+6 move container to workspace number 6
-  $mod+Shift+7 move container to workspace number 7
-  $mod+Shift+8 move container to workspace number 8
-  $mod+Shift+9 move container to workspace number 9
-  $mod+Shift+0 move container to workspace number 10
-}
+bindsym $mod+r mode "resize"
 
-#
-# Layout stuff:
-#
-bindsym {
-  # Make the current focus fullscreen
-  $mod+f fullscreen
+#  ____   ___  ____  ____  _____ ____  ____  
+# | __ ) / _ \|  _ \|  _ \| ____|  _ \/ ___| 
+# |  _ \| | | | |_) | | | |  _| | |_) \___ \ 
+# | |_) | |_| |  _ <| |_| | |___|  _ < ___) |
+# |____/ \___/|_| \_\____/|_____|_| \_\____/ 
 
-  # Toggle the current focus between tiling and floating mode
-  $mod+Shift+space floating toggle
+#border width
+default_border pixel 2 
 
-  # Swap focus between the tiling area and the floating area
-  $mod+space focus mode_toggle
+# target                 title     bg    text   indicator  border
+client.focused           $lavender $base $text  $rosewater $lavender
+client.focused_inactive  $overlay0 $base $text  $rosewater $overlay0
+client.unfocused         $overlay0 $base $text  $rosewater $overlay0
+client.urgent            $peach    $base $peach $overlay0  $peach
+client.placeholder       $overlay0 $base $text  $overlay0  $overlay0
+client.background        $base
 
-  # Move focus to the parent container
-  $mod+a focus parent
 
-  # Move the currently focused window to the scratchpad
-  $mod+Shift+minus move scratchpad
 
-  # Show the next scratchpad window or hide the focused scratchpad window.
-  # If there are multiple scratchpad windows, this command cycles through them.
-  $mod+minus scratchpad show
-}
+# Set inner/outer gaps
+gaps inner 15
+gaps outer 0
 
-#
-### Screenshot mode:
-#
-set {
-  $screenshot "Screenshot: [s]creen [w]window [r]egion"
 
-  $screenshot-cmd ~/.config/sway/screenshot.sh
-}
+# random wallpaper 
+set $wallpapers_path ~/Pictures/wall/
+output * bg `find $wallpapers_path -type f | shuf -n 1` stretch
 
-mode $screenshot {
-  bindsym --to-code {
-    s mode "default", exec $screenshot-cmd screen
-    w mode "default", exec $screenshot-cmd window 
-    r mode "default", exec $screenshot-cmd region 
 
-    Return mode "default"
-    Escape mode "default"
-    $mod+x mode "default"
+
+smart_borders on
+gaps inner 6
+
+#  ___ _   _ ____  _   _ _____ 
+# |_ _| \ | |  _ \| | | |_   _|
+#  | ||  \| | |_) | | | | | |  
+#  | || |\  |  __/| |_| | | |  
+# |___|_| \_|_|    \___/  |_|  
+#                              
+
+input {
+  type:touchpad {
+    tap enabled
+    natural_scroll enabled
+    middle_emulation enabled
+    dwt disabled
+  }
+
+
+
+  type:touch {
+    events disabled
   }
 }
 
-bindsym --to-code $mod+s mode $screenshot
+input * {
+   natural_scroll enabled
+}
 
-
-
-# window decorations
-# class			        border	    background	text        indicator   child_border
-client.focused          #A4B9EF     #332E41     #E5B4E2     #DADAE8     #A4B9EF
-client.focused_inactive #A4B9EF     #332E41     #E5B4E2     #DADAE8     #A4B9EF
-client.unfocused        #A4B9EF     #1E1E28     #DADAE8     #DADAE8     #575268
-client.urgent           #A4B9EF     #575268     #EBDDAA     #DADAE8     #EBDDAA
-
-#
-# Status Bar:
-#
-bar swaybar_command waybar
-include /etc/sway/config.d/*
+output eDP-1 pos 0 0
+output DP-1 pos 1920 0
